同步于: 10月31日9时3分

--- a/pages/p5/950990.md
+++ b/pages/p5/950990.md
@@ -1,4 +1,4 @@
-### 神明为什么会对某人特别严厉呢？(组图)
+### 快递业现罢工潮 双十一戏未开场 台先塌了？(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,14 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="" src="https://img2.secretchina.com/pic/2018/5-1/p2156761a228076124-ss.jpg" style="height:335px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="快递 罢工 双十一 电商" src="https://img2.secretchina.com/pic/2017/11-14/p2032121a272864377-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   神总适时提醒人们说：“作为一个修行人，凡事应先修正自已！怎能向外求，盯着别人的错误呢？”（绘图：志清/看中国）
+   多个媒体不断曝出快递业
+   <strong>
+    罢工
+   </strong>
+   的消息。（图片来源：Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,28 +33,52 @@
   </div>
  </div>
  <p>
-  从前有位修行人，心地善良纯净。他在森林里结舍，每天在大树下诵经读法、持咒守戒、打坐入定。
+  【看中国2020年10月31日讯】（看中国记者丁晓雨综合报导）中国
+  <strong>
+   电商
+  </strong>
+  平台
+  <strong>
+   双十一
+  </strong>
+  的鏖战即将开启，各大平台早早做好了决战的准备，可谓万事具备。然而，线上购物最关键的一环，支撑电商运转的
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/快递" target="_blank">
+    快递
+   </span>
+  </strong>
+  行业，最近却出了大问题。多个媒体不断曝出快递业
+  <strong>
+   罢工
+  </strong>
+  的消息，令今年双十一前，电商圈与快递业都弥漫着浓重的焦虑情绪。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <strong>
-   修行人手摘香莲　惹怒莲花池神
-  </strong>
+  日前，中国国家邮政局公布，
+  <span href="https://zh.wikipedia.org/wiki/双十一" target="_blank">
+   双十一
+  </span>
+  期间预计日均快递业务量达4.9亿，约为日常2倍。但业务量增长的预测，却没有带来快递业的喜悦。快递罢工，成了近期新浪微博不断发酵的话题。涉及罢工的快递公司，涵盖四通一达。
  </p>
  <p>
-  一天他打完坐，起身信步走走。一抬头，看到眼前出现了一个莲花池，满池盛开的莲花，迎风摇曳，十分美丽。他心中欢喜，生起一个念头：这么美丽的莲花，摘一朵带回精舍，敬放在佛像前，禅坐时闻着沁人心脾的芬芳，多好啊！
+  腾讯财经新闻有报导称，虽然百世快递、韵达、中通、圆通、申通等
+  <span href="https://zh.wikipedia.org/wiki/速遞" target="_blank">
+   快递
+  </span>
+  公司公开回应称，整体运行正常，但多名消费者表示，自己近期遇到了快递延误、甚至快递到了家门口被退回的情况。淘宝商家也证实，一些区域快递停发。
  </p>
  <p>
-  于是，他弯身在池边挑选了一朵莲花，摘下来。他满心欢喜地将莲花双手捧在胸前，正要离开，耳边突然传来一个巨大而又严厉的声音：“你怎敢随意偷采我的莲花？”
+  有消费者称，包裹在距离自己不到3公里的地方竟然被退回了，“联系了卖家，卖家并没有拦截或者要求退回”，联系快递公司，客服告知是因为当地快递网点停运。
  </p>
  <p>
-  他环顾四周，什么也看不到，他对着虚空发问：“你是谁？为何说这莲花是你的？”
+  微博上曝光的出现类似情况的快递，包括中通、申通、天天、邮政、圆通、韵达、百世等品牌下的网点均出现了停运。
  </p>
  <p>
-  虚空中的声音平静威严：“我是此处的莲花池神，池中所有莲花都因我的呵护而盛开。你是修行人，心起贪念，你却不知约束，任贪念主宰你，偷采我的莲花，现在还不知反省，是何道理！？”
+  山东泰安地区的消费者下单，会被商家告知无法配送，待快递恢复运营再行下单。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -65,7 +93,7 @@
   </div>
  </center>
  <p>
-  修行人顿感惭愧，于是他朝着虚空顶礼：“尊敬的莲花池神！我知道错了，从今以后绝不会贪取任何不属于自己的东西。”
+  河南登封消费者在微博爆料，称自己一个中通的快递信息多日迟迟没有更新，10月26日直接去了快递分拣中心，到了之后发现快递堆积如山，现场有不少用户和她一样等不到快递就自己上门寻找，发现该网点仅剩一名工作人员，有很多已经转行去做外卖员了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -80,7 +108,11 @@
   </div>
  </center>
  <p>
-  这时，另一个陌生人走近了莲花池边，只见那人低头自语：“哇！这么好的莲花啊！我何不摘了拿到集上，能卖很多钱呢！卖了钱我一定再上赌场，把昨天输的钱赢回来！”
+  江苏的消费者称自己的韵达快递5天没有更新物流信息，快递点电话无人接听。看新闻后才知道，快递员因为网点拖欠工资
+  <span href="https://zh.wikipedia.org/wiki/罷工" target="_blank">
+   罢工
+  </span>
+  了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -95,7 +127,7 @@
   </div>
  </center>
  <p>
-  说罢，那人跳进莲花池，很快就把整池的莲花摘个精光，之后，他扬长而去。满池莲叶被他弄得狼藉一片，池底污泥泛起，美丽的荷花池变成了一潭浊水。
+  湖南长沙一韵达快递网点大量快递延误、丢失，员工工资被拖欠数月，大量快递票件积压。一快递员表示，该服务站已拖欠20余名员工共计30多万元工资，自己从4月到现在只拿到5000元工资。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -110,25 +142,7 @@
   </div>
  </center>
  <p>
-  修行人看得目瞪口呆，心中充满疑惑，还有委屈与不满，他对着虚空说：“莲花池神呀！我只不过采了一朵莲花，你就那么严厉地斥责我。刚才那个人采光了你所有的莲花，将整个莲花池都践踏了，你却视而不见、一言不发，这公平吗？”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align:center">
-  <img alt="" src="https://img2.secretchina.com/pic/2019/9-18/p2520571a584156675-ss.jpg"/>
-  <br>
-   莲花池神说道：“一块洁白的布匹，沾上一点脏污就非常显眼，但只要用力清洗，便会洁白如新；而一块黑抹布，长年浸渍在污水中，恐怕怎么洗也洗不干净了。”（摄影：李芳）
-  </br>
+  深燃报导称，有中通快递前加盟商表示，网点大面积停业，从海南三亚到新疆乌鲁木齐都有，并且数量还在不断增加。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -143,7 +157,56 @@
   </div>
  </center>
  <p>
-  虚空中传来莲花池神慈悲的声音：“一块洁白的布匹，沾上一点脏污就非常显眼，但只要用力清洗，便会洁白如新；而一块黑抹布，长年浸渍在污水中，恐怕怎么洗也洗不干净了。”
+  据报导，快递员因派费降低
+  <span href="https://www.secretchina.com/news/gb/tag/罢工" target="_blank">
+   罢工
+  </span>
+  甚至改行，基层网点受困于不断提升的揽件指标甚至发空包充数，这些问题的背后与快递行业愈演愈烈的价格战不无关系。为了争夺更大的市场份额，快递公司纷纷选择低价冲量。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  由此带来的后果，就是快递行业正在全国范围内悄然上演一场“罢工潮”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “想过可能不挣钱，但没想到会亏这么多钱”，快递加盟商也是一肚子苦水，有人经营的中通网点平均每月亏损20多万元，已经亏了300多万元。亏损的主要原因是亏本收件和各种罚款。如果总部把发件指标订得高于网点实际能力，网点没有完成，不仅面临罚款，而且发件成本会上升，导致亏损。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  加盟商称，“月月都亏本收件、交罚款”，自己网点收的快递数每个月不到3万件，但总部会把每月任务量定为5万件，网点为了完成任务只能低价、亏本收件。如果任务量不达标，管理中心还会收取每单0.5元的罚款。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -162,7 +225,7 @@
   </ins>
  </center>
  <p>
-  “你是个修行人，如同那块洁白的布匹，我呵斥你是为了提醒，让你及时意识到自己的污点，去掉它，你应为此感到高兴才是。而那赌徒，已沉沦太久，难有改过之念，自会坠入报应之道，我又何必呵斥他呢！”
+  多名快递加盟商还表示，任务量越定越高，罚款也越收越高。有的快递总公司规定，未达到指标的按照未完成票数处以3元每票的处罚。网点实在没法完成，为了避免罚款就“想法儿糊弄”，发“空包”应付，表面上完成任务量。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -177,7 +240,7 @@
   </div>
  </center>
  <p>
-  神继续启悟说：“作为一个修行人，凡事应先修正自已！怎能向外求，盯着别人的错误呢？”
+  尽管快递网点不堪重负，但任务量还在继续调高，包装费也从每天700元涨到了1200元。连续亏损之下，网点资金链断裂，无法按时发放工资，导致快递员纷纷离职，网点无法正常派件运营。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -192,7 +255,7 @@
   </div>
  </center>
  <p>
-  这时修行人才悟到，刚才自己岂不是盯着别人的过错不放吗？难怪打坐常陷入昏沉啊。一味诵经持咒，不等于修行，遇事不责己过，反迁怒他人，又如何能获得解脱呢！
+  “罚款的理由，除了任务量不达标，还有顾客投诉”，如果被投诉，网点不仅要赔偿消费者的损失，总部还会对网点有大约500元的罚款。有时候，客户的一般咨询，也被总部作为投诉对网点罚款。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -207,7 +270,37 @@
   </div>
  </center>
  <p>
-  参考资料：民间故事
+  如果有消费者投诉到国家邮政局，第二次投诉罚网点1500元，同时KPI扣分。这些罚款也不能直接转嫁给快递员，“快递员被罚得多了就罢工，网点损失更大”。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  而快递企业之间愈演愈烈的价格战，导致收件价和派件费降低，末端网点和快递员的收入相应降低。据快递员称，现在派件费扣除短信费、电话费后，一单只能赚0.25元。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  对快递公司来说，价格战的最终目的，就是抢占市场份额，形成垄断，一家独大，最终控制市场价格。所以，目前快递业的相互侵轧短期内不会停止。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -271,13 +364,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/27/911140.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/950990.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/950990.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/950990.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/31/950990.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p7/911140.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/950990.md' width='0px' height='0px'/>
