--- a/pages/p8/950860.md
+++ b/pages/p8/950860.md
@@ -1,4 +1,4 @@
-### 美国即将推出制裁新疆强迫劳工产品的新措施(图)
+### 缺少“底线”的中国 “生命线”在哪？(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,18 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="新疆 奴工 棉花" src="https://img3.secretchina.com/pic/2020/1-22/p2609451a108928488-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="底线 生命线 道德 山寨" src="https://img3.secretchina.com/pic/2020/10-31/p2807952a116438613-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   新疆存在使用奴工从事生产活动的现象。（图片来源：Getty Images）
+   缺少“
+   <strong>
+    底线
+   </strong>
+   ”的中国人，“
+   <strong>
+    生命线
+   </strong>
+   ”在哪？（图片来源：Adobe stock)
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,70 +29,76 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  電影《永恆的五十分鐘》片尾曲 - 《找真相》](http://141.164.51.119:10000/videos/news/../legend/index.html)
-
-#### [ 🔥  秦鹏快评：华为7宗罪，为什么华为必须“死”？](http://141.164.51.119:10000/videos/news/qp01.html)
-
-#### [ 🔥  《走出文化亡國》第十一集 江峰走进栏目和李军一起畅谈中共逆淘汰](http://141.164.51.119:10000/videos/news/../res/zcwhwg/index.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月9日讯】针对
+  你问当下中国缺少什么？有人说最缺“
+  <span href="https://www.secretchina.com/news/gb/tag/底线" target="_blank">
+   底线
+  </span>
+  ”。这很可怕。一个人，没了底线，就什么都敢干；一个社会，没了底线，就什么都会发生。但之所以会失去底线，关键还是在“
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/新疆" target="_blank">
-    新疆
-   </span>
+   道德
   </strong>
-  使用
-  <strong>
-   奴工
-  </strong>
-  从事生产活动的现象，美国政府即将推出新的制裁措施，阻止进口中国新疆出产的
-  <strong>
-   棉花
-  </strong>
-  和番茄等产品。
+  ”的下滑。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  美国海关与边境保护局发言人表示，
-  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-   川普
+  因为失去了
+  <span href="https://www.secretchina.com/news/gb/tag/道德" target="_blank">
+   道德
   </span>
-  (特朗普)政府原定9月8日宣布的制裁令由于“日程冲突”而延后至本周晚些时候公布。
+  的约束，所以底线全无。比方说，腐败变质的食品，也敢卖；还没咽气的病人，也敢埋；自己喝得五迷三道，那车也敢开；明明里面住着人，那房也敢拆。还有“共和国脊梁”这样的桂冠，也敢戴，全不管那奖多么野鸡，多么
+  <strong>
+   山寨
+  </strong>
+  。
  </p>
  <p>
-  《路透社》报道称，对
-  <span href="https://www.secretchina.com/news/gb/tag/棉花" target="_blank">
-   棉花
+  于是冲突迭起，于是舆论哗然。不是“当惊世界殊”，是“世界当惊殊”——怎么会有这种事?怎么会这样？
+ </p>
+ <p>
+  奇怪并不奇怪，不奇怪才怪，因为突破的都是底线，比如“恻隐之心”，比如“敬畏之心”，比如“己所不欲，勿施于人”，比如“杀人偿命，借债还钱”这些原本都是常识，却被丢到九霄云外。被严令禁止的“
+  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwjlwe3_lN7sAhWjy4sBHSFJDJoQmhMwF3oECAkQAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F2008%25E5%25B9%25B4%25E4%25B8%25AD%25E5%259B%25BD%25E5%25A5%25B6%25E5%2588%25B6%25E5%2593%2581%25E6%25B1%25A1%25E6%259F%2593%25E4%25BA%258B%25E4%25BB%25B6&amp;usg=AOvVaw2Lk2jChL8p7n84fmzIQkXs">
+   毒奶粉
   </span>
-  、番茄和另外五种跟新疆强迫劳动有关的商品将是美国海关与边境保护局所采取的前所未有的行动，此举可能会加重美国与中国之间的紧张关系。
+  ”、“地沟油”等黑心产品与食品，还有黑心行为，自然时不时就会重现江湖。
  </p>
  <p>
-  美国海关依据“暂扣令（Withhold Release Orders）”可以扣押涉嫌使用
-  <span href="https://www.secretchina.com/news/gb/tag/奴工" target="_blank">
-   奴工
+  可见，“道德”是最重要的。失去了道德，当然也就少了底线，企业就会弄虚作假，学者就会指鹿为马，裁判就会大吹黑哨，官员就会贪赃枉法，医生就会摘取活人器官，警察就会刑讯逼供，法院就会草菅人命。从这个角度说，底线也可以说是人的
+  <span href="https://www.secretchina.com/news/gb/tag/生命线" target="_blank">
+   生命线
   </span>
-  生产的货物，以打击人口贩运、童工和其它侵犯人权的行为。
+  。
  </p>
  <p>
-  新疆大规模迫害维吾尔穆斯林的事件暴露之后，美国总统川普加大了对北京当局的压力。联合国报告说，可信的报告显示，新疆集中营里关押了100万穆斯林，他们大多数都被迫从事生产劳动。
+  人类为什么要有底线？为了生存。人，是社会的存在物。任何人，都不能一个人活在这世界上。
  </p>
- <p>
-  美国海关与边界保护局行政助理专员史密斯(Brenda Smith) 向《路透社》表示，进口禁令适用于全部供应链，包括棉花、棉纱、纺织品与服装，以及番茄、番茄糊、与其它新疆出产的商品。
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align: center;">
+  <img alt="继承中华民族传统，做人要有底线。" src="https://img3.secretchina.com/pic/2020/10-30/p2807172a41762115-ss.jpg" style="height:337px; width:600px"/>
+  <br>
+   继承中华民族传统，做人要有底线。（图片来源：Adobe stock)
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -99,7 +113,7 @@
   </div>
  </center>
  <p>
-  史密斯在接受《路透社》采访的时候说：“我们掌握的合理证据显示，新疆出产的棉织品和番茄的供应链中存在使用奴工的可能。”史密斯表示，“我们将继续进行调查，填补调查欠缺之处。”
+  所以，只有让别人生存，自己才能生存；让别人活得好，自己才活得好。希望所有的人都活得好，甚至为了别人的生存放弃自己的利益，这是“境界”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -114,11 +128,7 @@
   </div>
  </center>
  <p>
-  今年7月，美国政府针对新疆奴工问题把几家名牌服装公司列入了黑名单，比如拉尔夫劳伦（Ralph Lauren），汤米希尔菲格（Tommy Hilfiger）和雨果博斯（Hugo Boss）等。这些公司抱怨说，
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  供应链的不透明性，使它们很难确定棉花的来源。
+  至少不妨碍别人的生存，不侵犯别人的利益，不破坏社会的环境，这是“底线”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -133,22 +143,7 @@
   </div>
  </center>
  <p>
-  美国参议员鲁比奥(Marco Rubio) 在7月份曾经表示，“国家扶持的强迫劳工现象在中国非常普遍。新疆发生的人类悲剧突出显示，文明社会和政府有必要对此做出反应。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  美国政府的禁令可能会对美国的零售商、服装加工商、以及食品加工商造成深远的影响。世界棉花总产量中大约20%来自中国，而新疆是中国的主要产棉区。此外，中国还是世界最大的棉花进口国，其中主要进口来自美国。
+  其中，通过立法程序明文规定下来的，是“法律底线”；在社会生活中约定俗成，大家都共同遵守的，是“道德底线”；各行各业必须坚守的原则，比如商家不卖假货，会计不做假账，医生不开假药，是“行业底线”和“职业底线”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -167,7 +162,7 @@
   </ins>
  </center>
  <p>
-  受到这项禁令影响的有新疆建设兵团生产的棉花，伊犁卓万服装制造有限公司和保定市绿叶硕子岛商贸有限公司生产的服装。美国海关与边境保护局称，这些实体使用了中国官方所说的“再教育培训中心”的在押人员。
+  境界不一定人人都有或要有，底线却不能旦夕缺失。因为底线是基础，是根本，是不能再退的最后一道防线。基础不牢，地动山摇；防线失守，全盘崩溃。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -182,7 +177,7 @@
   </div>
  </center>
  <p>
-  越来越多的证据显示，北京当局在新疆建立了大批集中营，关押着上百万的新疆维吾尔穆斯林。集中营实行监狱式管理，其中被称为“学员”的维吾尔人被迫从事各种生产活动。
+  中国人有史以来，从来就有底线。做生意，明码实价，童叟无欺；做学问，言之有据，持之有故；做官，不夺民财，不伤无辜；做人，不卖朋友，不丧天良。正是靠着底线的坚守，中华民族虽历尽苦难，中华文明却得以延续。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -197,7 +192,22 @@
   </div>
  </center>
  <p>
-  中国官方解释说，这些地方是职业培训中心，主要是给当地少数民族传授知识和职业技能，帮助他们找到工作。但后来，北京当局又承认，他们把维吾尔集中起来是为了帮助他们转变思想，消除极端主义和恐怖主义产生的基础。
+  要想守住底线，当官的就必须说真话，做真事，不能造了假，还要唱高调。因为那些“道德高标”比如“毫不利己，专门利人”，自己就做不到，还要所有人都能做到。做不到，又必须做，就只好做假。道德做假一开头，其他的造假就挡不住。假烟、假酒、假合同、假学历，就都来了。当下中国缺底线，这是重要原因之一。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  要让中国的未来重拾希望，就是从上到下都能守住“底线”，这样也才有机会看见“生命线”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -229,7 +239,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -261,13 +271,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/945642.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/945642.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/945642.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/09/945642.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/950860.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/950860.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/950860.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/31/950860.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/945642.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/950860.md' width='0px' height='0px'/>
