--- a/pages/p5/951049.md
+++ b/pages/p5/951049.md
@@ -1,4 +1,4 @@
-### 李嘉诚出售京沪500亿资产？长实集团回应(图)
+### 陆金所美股上市破发 换科技马甲难改P2P本质(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="李嘉诚 长实集团 资产" src="https://img2.secretchina.com/pic/2019/10-1/p2529862a582908330-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="陆金所 P2P 网贷 美股" src="https://img3.secretchina.com/pic/2020/7-5/p2726102a345841675-ss.jpg"/>
   <br>
-   此前传李嘉诚出售京沪500亿资产。（图片来源：Getty Images）
+   网友表示，躲过P2P清退的陆金所，实质就是一家高利贷公司。（图片来源：Adobe Stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,69 +21,56 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  電影《永恆的五十分鐘》片尾曲 - 《找真相》](http://141.164.51.119:10000/videos/news/../legend/index.html)
-
-#### [ 🔥  秦鹏快评：华为7宗罪，为什么华为必须“死”？](http://141.164.51.119:10000/videos/news/qp01.html)
-
-#### [ 🔥  《走出文化亡國》第十一集 江峰走进栏目和李军一起畅谈中共逆淘汰](http://141.164.51.119:10000/videos/news/../res/zcwhwg/index.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月9日讯】（看中国记者文龙综合报导）日前有消息称香港富豪
+  【看中国2020年10月31日讯】（看中国记者丁晓雨综合报导）曾经是中国最大的
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/李嘉诚" target="_blank">
-    李嘉诚
+   P2P网贷
+  </strong>
+  业务贷方之一的
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/陆金所" target="_blank">
+    陆金所
    </span>
   </strong>
-  旗下的
-  <strong>
-   长实集团
-  </strong>
-  拟出售位于北京、上海的两处价值达500亿元人民币
-  <strong>
-   资产
-  </strong>
-  。对此，长实集团进行正式回应。
+  ，换上一件新马甲，摇身变成一家提供财富管理和零售借贷服务的金融巨头，并于美东时间10月30日在纽交所上市，以13.5美元的发行价开盘，随即破发，截至收盘下跌4.81%，报12.85美元。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  据传长实集团今次出售的
-  <span href="http://zh.wikipedia.org/zh-cn/%E8%B5%84%E4%BA%A7" target="_blank">
-   资产
+  据《腾讯证券》10月31日报导，陆金所于美东时间10月30日正式登陆纽交所，以13.5美元的发行价挂牌上市，交易代码LU。开盘即破发，股价报11.6美元，较之发行价下跌14.1%，随后一度转涨，截至收盘下跌4.81%，报12.85美元。
+ </p>
+ <p>
+  陆金所10月30日在一份公告中称，以每股13.50美元的价格发行1.75亿股美国存托股票（ADS）。陆金所募的集资金规模使其跻身中资公司今年在美国最大IPO行列。《腾讯财经》报导，陆金所得到中国市值最大的保险公司中国平安的支持。背靠平安这棵大树，陆金所的P2P业务成交规模一直是业内榜首，名副其实的
+  <span href="https://zh.wikipedia.org/wiki/网络借贷" target="_blank">
+   P2P
   </span>
-  是住宅和商业综合体，分别为北京市朝阳区逸翠园二期项目，以及上海普陀区高尚领域综合体项目。而该笔交易起初主要以北京逸翠园二期为主，附带上海高尚领域一部分资产，长实有意将两处资产整体打包出售，令总价值相应增加。
+  界“高富帅”。
  </p>
  <p>
-  逸翠园项目位于北京市东四环与东五环之间的朝阳区姚家园地段，是北京中央商务区CBD周边不可多得的低密度高档社区。该项目一期已售完。该项目定位于“城市高档低密度住宅”，距离主要商务区CBD和东二环较近，并且密度不高，小区整体档次高。
- </p>
- <p>
-  <span href="http://zh.wikipedia.org/zh-cn/%E9%95%BF%E5%AE%9E%E9%9B%86%E5%9B%A2" target="_blank">
-   长实集团
+  但随着监管环境的变化，陆金所忍痛割下
+  <span href="https://www.secretchina.com/news/gb/tag/P2P" target="_blank">
+   P2P
   </span>
-  在20年前以7亿元的价格买下这片土地，直至2019年才开工建设，北京项目部分楼体已封顶。
+  这块肥肉，摇身一变，又成为一家提供财富管理和零售借贷服务的金融巨头。以“中国领先的科技型个人金融服务平台”的名头，开启赴美上市之路。
  </p>
  <p>
-  而上海高尚领域位处上海普陀真如副中心核心地段，项目总建筑面积近120万平方米，是上海中环内在建最大规模地标性城市综合体项目，规划有行政公馆、高级住宅、商业领地、星级酒店及商圈地标五大功能于一体。行政公馆空间灵活既可作办公之用，亦同时满足各种生活所需。标准单位面积约106至170平米。
- </p>
- <p>
-  日前一名接近交易的知情人士透露，融创中国有意接手。这不是融创中国第一次接手
-  <span href="https://www.secretchina.com/news/gb/tag/长实集团" target="_blank">
-   长实集团
+  根据招股说明书，
+  <span href="https://zh.wikipedia.org/wiki/陆金所" target="_blank">
+   陆金所
   </span>
-  资产，2019年10月，长实集团将大连市西岗山黑嘴子项目出售给了融创，作价超过40亿元。
+  募集资金的用途可能包括产品开发、销售和营销活动，技术基础设施，收购或投资。
+ </p>
+ <p>
+  陆金所IPO定价在11.5至13.5美元/ADS，拟发行1.75亿份ADS，募资20～30亿美元，每手入场费为810美元。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -98,11 +85,7 @@
   </div>
  </center>
  <p>
-  综合9月8日香港及中国内地媒体报道，长实集团回应称：“市场上很多人对我们的项目感兴趣，不代表我们需要出售相关
-  <span href="https://www.secretchina.com/news/gb/tag/资产" target="_blank">
-   资产
-  </span>
-  。”
+  豹变表示，尽管陆金所换了个科技马甲，但其本质仍然是家金融公司。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -117,10 +100,7 @@
   </div>
  </center>
  <p>
-  <span href="http://zh.wikipedia.org/zh-cn/%E6%9D%8E%E5%98%89%E8%AF%9A" target="_blank">
-   李嘉诚
-  </span>
-  之子李泽钜此前在答记者问时就表示，集团一直有在内地投资，从无计划过离开内地。目前，长实集团在内地拥有的房地产项目逾50个，分布在20多个城市。地产业务以外，屈臣氏零售网络去年在内地开设了450家新店，目前屈臣氏于内地的店铺数目已超3800家。
+  目前，陆金所的主营业务分为零售信贷和财富管理两大板块，分别基于“平安普惠”和“陆金所”开展。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -135,11 +115,7 @@
   </div>
  </center>
  <p>
-  抛售
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  资产是李嘉诚旗下公司近些年来的常规动作。据不完全统计，2011年至2020年期间，李嘉诚累计抛售资产项目超过25个，套现超2700亿港元。
+  2020 年上半年，陆金所营业收入257亿元，同比增长9.5%，增速大幅放缓，净利润为72.72亿元，同比下降2.8%。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -154,7 +130,7 @@
   </div>
  </center>
  <p>
-  2013年8月，李嘉诚以26亿元人民币的价格出售广州西城都荟广场。
+  豹变认为，经济恢复期理应是小微企业主贷款需求旺盛的时候，但2020年上半年陆金所新增贷款的增速保持在24.8%，与2019年全年相比变化甚微，收入增速却大幅下滑。其原因之一，是获客变得更难。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -169,7 +145,7 @@
   </div>
  </center>
  <p>
-  同年10月，李嘉诚以89.5亿港元出售上海陆家嘴的东方汇经中心。
+  截至2017年底、2018年底和2019年底，陆金所累计借款人数量为750万、1030万和1240万，截至2020年6月30日为1340万。新增贷款人数量增速明显减缓。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -184,7 +160,7 @@
   </div>
  </center>
  <p>
-  2014年，李嘉诚以57.5亿元人民币的价格，卖掉北京三里屯地标建筑盈科中心。
+  财富管理业务中出现了注册人数和活跃投资者增速下滑的趋势。2020年上半年，这部分收入同比下降53%。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -199,7 +175,7 @@
   </div>
  </center>
  <p>
-  2015年，李嘉诚以5.2亿元人民币的价格，出售香港新界商业地产物业盈晖荟等。
+  获客成本占收入的比重不断攀升，2018年只有11.9%，2020年上半年，已经增加至23.0%。且真实的获客成本更高，获客也更艰难。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -214,7 +190,7 @@
   </div>
  </center>
  <p>
-  2016年，李嘉诚以230亿港元的价格，出售上海陆家嘴世纪汇广场的物业发展项目。
+  豹变表示，收入增速放缓、获客成本高、销售费用率居高不下，陆金所的2020年很艰难，但雪上加霜的是，还产生了高额的信用减值损失。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -233,7 +209,7 @@
   </ins>
  </center>
  <p>
-  2017年，李嘉诚大手笔卖掉4个香港项目，其中以402亿港元出售中环中心75%的股权最受关注。
+  尤其是2020年上半年，信用减值损失高达10.99亿元，占收入的比重为4.3%，上年同期只有4.7亿元，翻了一倍还多。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -248,7 +224,7 @@
   </div>
  </center>
  <p>
-  2018年，李嘉诚以25.6亿元人民币的价格出售北京京通罗斯福广场。
+  而在21聚投诉、新浪旗下的黑猫投诉平台上，搜索陆金所，基本是投诉陆金所巧立名目使得真实的利率高于指导利率。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -263,7 +239,7 @@
   </div>
  </center>
  <p>
-  2019年，长实集团将大连市西岗山黑嘴子项目出售给融创中国，作价超过40亿元。
+  据陆金所招股书显示，截至2020年6月底，陆金所的一般无抵押贷款的平均年化利率为28.6%，而有抵押贷款的平均年化利率为17.4%，均已超过民间借贷利率受保护的上限：15.4%，面临着“高利贷”的风险。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -278,7 +254,7 @@
   </div>
  </center>
  <p>
-  2020年7月23日，长实集团以78.47亿元的交易对价，出售开发时间长达16年的成都南城都汇项目的住宅、商业单位，以及停车场。
+  众多网友表示，无论挂上多么耀眼的科技光环，躲过P2P清退的陆金所，实质就是一家高利贷公司。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -293,7 +269,11 @@
   </div>
  </center>
  <p>
-  据长实集团8月初公布的今年上半年财务报告的数据显示，长实集团实现收入（包括摊占合营企业之收入）363.23亿港元，同比增加6.81%；股东应占净利润约为63.60亿港元，同比减少57.96%。
+  深蓝财经称，陆金所在招股书中，舞弄了一些高级的概念，包括清退
+  <span href="https://zh.wikipedia.org/wiki/网络借贷" target="_blank">
+   网贷
+  </span>
+  业务、轻资产模式等等。但概念之下，陆金所P2P的基本内核并没有本质的改变，只不过采用了全新的形式，收割对象转向了小微企业。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -325,7 +305,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -357,13 +337,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/945647.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/945647.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/945647.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/09/945647.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951049.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951049.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951049.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/31/951049.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/945647.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/951049.md' width='0px' height='0px'/>
