--- a/pages/p7/911140.md
+++ b/pages/p7/911140.md
@@ -1,4 +1,4 @@
-### 中国多所大学增大量监视器 :人脸识别 监控日常行踪(组图)
+### 神明为什么会对某人特别严厉呢？(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="大学 监控 人脸识别" src="https://img3.secretchina.com/pic/2020/9-1/p2767061a252226640-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="" src="https://img2.secretchina.com/pic/2018/5-1/p2156761a228076124-ss.jpg" style="height:335px; width:600px"/>
   <br>
-   中国大陆为防疫加强监控大学校园。（图片来源：Adobe stock／南京大学官方微博）
+   神总适时提醒人们说：“作为一个修行人，凡事应先修正自已！怎能向外求，盯着别人的错误呢？”（绘图：志清/看中国）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,29 +21,15 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  自己打自己！發射導彈竟落在廣西；偷了就跑 又一中共軍方特務被抓；](http://141.164.51.119:10000/videos/news/soh01.html)
-
-#### [ 🔥  揭开中共秘密结盟日军，卖国求生秘闻 ](http://141.164.51.119:10000/videos/news/epoch01.html)
-
-#### [ 🔥  習近平能一手搞垮中共？ 美或暗助習內鬥；王岐山怎麼了？](http://141.164.51.119:10000/videos/news/epoch02.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月1日讯】中国的
-  <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
-   武汉肺炎
-  </span>
-  疫情尚未平息，但各地大学已经陆续复课，外媒发现，中国多所大学都以防疫为由，增设严密监控系统，包括人脸辨识、记录学生行踪等功能。有些大学还要求学生事先申请才能离开校园，甚至连在宿舍内洗澡都要预先登记。
+  从前有位修行人，心地善良纯净。他在森林里结舍，每天在大树下诵经读法、持咒守戒、打坐入定。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
@@ -51,34 +37,20 @@
  </p>
  <p>
   <strong>
-   中国人民
-   <span href="https://www.secretchina.com/news/gb/tag/大学" target="_blank">
-    大学
-   </span>
-   学生外出须申请
+   修行人手摘香莲　惹怒莲花池神
   </strong>
  </p>
  <p>
-  英国
-  <span href="https://www.reuters.com/article/us-health-coronavirus-china-students/facial-recognition-and-bathtime-bookings-how-chinas-universities-are-reopening-idUSKBN25R0UW" target="_blank">
-   路透社
-  </span>
-  8月31日报导，中国大陆多所大学已实施一系列严格规定，包括限制学生饮食、洗澡、外出等。根据北京、南京、上海等地的大学生表示，他们需要向校方提交详细的行动报告，并留在校园内不得外出。
+  一天他打完坐，起身信步走走。一抬头，看到眼前出现了一个莲花池，满池盛开的莲花，迎风摇曳，十分美丽。他心中欢喜，生起一个念头：这么美丽的莲花，摘一朵带回精舍，敬放在佛像前，禅坐时闻着沁人心脾的芬芳，多好啊！
  </p>
  <p>
-  位于北京的“中国人民大学”近日发通告表明，所有学生必须事先申请才能离开校园。有学生质疑，校方根本没有告知申请程序，也不知道何谓合理的离校理由。
+  于是，他弯身在池边挑选了一朵莲花，摘下来。他满心欢喜地将莲花双手捧在胸前，正要离开，耳边突然传来一个巨大而又严厉的声音：“你怎敢随意偷采我的莲花？”
  </p>
  <p>
-  <strong>
-   北大宿舍增加大量监视器
-  </strong>
+  他环顾四周，什么也看不到，他对着虚空发问：“你是谁？为何说这莲花是你的？”
  </p>
  <p>
-  政府的采购文件显示，数十所大学采购了
-  <span href="https://www.secretchina.com/news/gb/tag/监控" target="_blank">
-   监控
-  </span>
-  系统，除了人脸辨识、追踪接触者、体温检测等功能外，这些系统还有推送通知的功能，每天多次提醒学生输入资料。
+  虚空中的声音平静威严：“我是此处的莲花池神，池中所有莲花都因我的呵护而盛开。你是修行人，心起贪念，你却不知约束，任贪念主宰你，偷采我的莲花，现在还不知反省，是何道理！？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -93,7 +65,7 @@
   </div>
  </center>
  <p>
-  一名北京大学学生透露，“突然之间，我们在宿舍里发现数十台摄录机，每层六台。”另一名北大学生形容，“这就像从醒来一刻到睡觉为止，都有人看着你。”
+  修行人顿感惭愧，于是他朝着虚空顶礼：“尊敬的莲花池神！我知道错了，从今以后绝不会贪取任何不属于自己的东西。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -108,9 +80,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   天津师大要求学生汇报日常行踪
-  </strong>
+  这时，另一个陌生人走近了莲花池边，只见那人低头自语：“哇！这么好的莲花啊！我何不摘了拿到集上，能卖很多钱呢！卖了钱我一定再上赌场，把昨天输的钱赢回来！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -125,7 +95,7 @@
   </div>
  </center>
  <p>
-  报导指出，官方招标文件显示，辽宁科技大学以42.9元万人民币购置的监控系统，拥有先进的人脸辨识温度检测镜头，可以找出没有戴口罩的人。平台每天都会编制一份体温报告，并储存学生30天的体温纪录。
+  说罢，那人跳进莲花池，很快就把整池的莲花摘个精光，之后，他扬长而去。满池莲叶被他弄得狼藉一片，池底污泥泛起，美丽的荷花池变成了一潭浊水。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -140,7 +110,25 @@
   </div>
  </center>
  <p>
-  南昌大学则以15.8万元购置可透过学生的身份证号码及脸部辨识技术，追踪并保存学生行踪资料的系统；天津师范大学的系统可搜集学生家庭的资料，包括他们离校后到过哪些地方，以及返校的方式等。
+  修行人看得目瞪口呆，心中充满疑惑，还有委屈与不满，他对着虚空说：“莲花池神呀！我只不过采了一朵莲花，你就那么严厉地斥责我。刚才那个人采光了你所有的莲花，将整个莲花池都践踏了，你却视而不见、一言不发，这公平吗？”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align:center">
+  <img alt="" src="https://img2.secretchina.com/pic/2019/9-18/p2520571a584156675-ss.jpg"/>
+  <br>
+   莲花池神说道：“一块洁白的布匹，沾上一点脏污就非常显眼，但只要用力清洗，便会洁白如新；而一块黑抹布，长年浸渍在污水中，恐怕怎么洗也洗不干净了。”（摄影：李芳）
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -155,24 +143,7 @@
   </div>
  </center>
  <p>
-  有学生证实，须向校方报告日常活动，没有回报者将会被系统标记。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   南京大学学生淋浴要预约
-  </strong>
+  虚空中传来莲花池神慈悲的声音：“一块洁白的布匹，沾上一点脏污就非常显眼，但只要用力清洗，便会洁白如新；而一块黑抹布，长年浸渍在污水中，恐怕怎么洗也洗不干净了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -191,7 +162,7 @@
   </ins>
  </center>
  <p>
-  还有部分大学生连洗澡都受到限制。南京大学学生透露，在宿舍淋浴都必须先预约，许多人因没预约而无法洗澡，还有些人被迫偷偷潜入浴室。
+  “你是个修行人，如同那块洁白的布匹，我呵斥你是为了提醒，让你及时意识到自己的污点，去掉它，你应为此感到高兴才是。而那赌徒，已沉沦太久，难有改过之念，自会坠入报应之道，我又何必呵斥他呢！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -206,7 +177,7 @@
   </div>
  </center>
  <p>
-  黑龙江齐齐哈尔大学8月27日发布的“预约洗浴通知”更为夸张，院方规定学生洗澡每月只能预约3次，每次洗浴时间不得超过60分钟。
+  神继续启悟说：“作为一个修行人，凡事应先修正自已！怎能向外求，盯着别人的错误呢？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -221,7 +192,7 @@
   </div>
  </center>
  <p>
-  不少学生透过网络表示不满。中国教育部对此回应，相关措施并非强制性，但强调学生若非必要不应离开校园。
+  这时修行人才悟到，刚才自己岂不是盯着别人的过错不放吗？难怪打坐常陷入昏沉啊。一味诵经持咒，不等于修行，遇事不责己过，反迁怒他人，又如何能获得解脱呢！
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -235,11 +206,8 @@
    </center>
   </div>
  </center>
- <p style="text-align:center">
-  <img alt="黑龙江 疫情" src="https://img3.secretchina.com/pic/2020/9-1/p2766931a115463833-ss.jpg"/>
-  <br>
-   对于齐大的这则通知，不少网友都表示不理解。（图片来源：微博）
-  </br>
+ <p>
+  参考资料：民间故事
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -271,7 +239,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -303,13 +271,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/944760.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/944760.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/944760.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/01/944760.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/911140.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/27/911140.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/944760.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p7/911140.md' width='0px' height='0px'/>
